rustdocs/errors/rust-bitcoin-benches-chacha20_poly1305-chacha20.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `chacha20_poly1305`
 --> ../rust-bitcoin/benches/chacha20_poly1305/chacha20.rs:8:5
  |
8 | use chacha20_poly1305::{chacha20::ChaCha20, Key, Nonce};
  |     ^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `chacha20_poly1305`
  |
help: you might be missing a crate named `chacha20_poly1305`, add it to your project and import it in your code
  |
3 + extern crate chacha20_poly1305;
  |

error[E0432]: unresolved import `criterion`
 --> ../rust-bitcoin/benches/chacha20_poly1305/chacha20.rs:5:5
  |
5 | use criterion::{criterion_group, criterion_main, BenchmarkId, Criterion, ...
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `criterion`
  |
help: you might be missing a crate named `criterion`, add it to your project and import it in your code
  |
3 + extern crate criterion;
  |

error[E0432]: unresolved import `chacha20_poly1305`
 --> ../rust-bitcoin/benches/chacha20_poly1305/chacha20.rs:8:5
  |
8 | use chacha20_poly1305::{chacha20::ChaCha20, Key, Nonce};
  |     ^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `chacha20_poly1305`
  |
help: you might be missing a crate named `chacha20_poly1305`, add it to your project and import it in your code
  |
3 + extern crate chacha20_poly1305;
  |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
